--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
+:root {
+    --bg: #fafafa;
+    --card: #fff;
+    --muted: #666;
+}
+
 .app {
     background-color: white;
-    height: 100vh;
+    min-height: 100vh;
+    min-width: 100vw;
     align-items: center;
     padding: 20px;
     display: flex;
@@ -8,11 +15,26 @@
     gap: 20px;
 }
 
-.stage {
-    border: 1px solid #ccc;
-}
-
-.timeline-container {
-    height: 100%;
-    width: 100%;
+button {
+    display: inline-block;	
+	box-sizing: border-box;
+	padding: 0 25px;
+	margin: 0 15px 15px 0;
+	outline: none;
+	border: 1px solid #fff;
+	border-radius: 50px;
+	height: 46px;
+	line-height: 46px;
+	font-size: 14px;
+	font-weight: 600;
+	text-decoration: none;
+	color: #444;
+	background-color: #fff;
+	box-shadow: 0 4px 6px rgb(65 132 144 / 10%), 0 1px 3px rgb(0 0 0 / 8%);
+	cursor: pointer;
+	user-select: none;
+	appearance: none;
+	touch-action: manipulation;  
+	vertical-align: top;
+	transition: box-shadow 0.2s;
 }
